Fix periods for Missed Children & Immunity Gap
Set data-period, not data-duration to set a lower bound on the charts
so that they don't request data with only a campaign_end

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -7104,8 +7104,9 @@ svg .hover-line {
   shape-rendering: crispEdges;
 }
 svg .region {
-  fill: #EEEEEE;
-  stroke: #FFFFFF;
+  fill: #FFFFFF;
+  stroke: #999999;
+  stroke-width: 1px;
 }
 svg .clickable {
   cursor: pointer;
